--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-router": "^5.1.2",
+    "react-scripts": "3.1.2",
+    "yarn": "^1.19.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:yapp-project/ssulthday.git",
+  "author": "gilsangwoo <gsw2205@gmail.com>",
+  "license": "MIT"
 }
