--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,27 +3,27 @@
     "short_name": "ssulsday",
     "description": "ssulsday test.",
     "icons": [{
-        "src": "../src/assets/icons/icon-128x128.png",
+        "src": "./icons/icon-128x128.png",
           "sizes": "128x128",
           "type": "image/png"
         }, {
-          "src": "../src/assets/icons/icon-144x144.png",
+          "src": "./icons/icon-144x144.png",
           "sizes": "144x144",
           "type": "image/png"
         }, {
-          "src": "../src/assets/icons/icon-152x152.png",
+          "src": "./icons/icon-152x152.png",
           "sizes": "152x152",
           "type": "image/png"
         }, {
-          "src": "../src/assets/icons/icon-192x192.png",
+          "src": "./icons/icon-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }, {
-          "src": "../src/assets/icons/icon-256x256.png",
+          "src": "./icons/icon-256x256.png",
           "sizes": "256x256",
           "type": "image/png"
         }, {
-          "src": "../src/assets/icons/icon-512x512.png",
+          "src": "./icons/icon-512x512.png",
           "sizes": "512x512",
           "type": "image/png"
         }],
