--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "yarn": "^1.19.1"
   },
