--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
@@ -23,3 +22,5 @@ yarn-debug.log*
 yarn-error.log*
 
 yarn.lock
+
+/src/config
