--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
   "main": "index.js",
   "repository": "git@github.com:yapp-project/ssulthday.git",
   "author": "gilsangwoo <gsw2205@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "proxy": "http://15.164.218.21:8080"
 }
