--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "node-sass": "^4.13.0",
     "react": "^16.10.1",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.10.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
@@ -14,9 +15,9 @@
     "yarn": "^1.19.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
