--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
+    "express": "^4.17.1",
     "node-sass": "^4.13.0",
     "react": "^16.10.1",
     "react-app-rewired": "^2.1.5",
