--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "node-sass": "^4.13.0",
+    "path": "^0.12.7",
     "react": "^16.10.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.10.1",
