--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,7 +27,7 @@
           "sizes": "512x512",
           "type": "image/png"
         }],
-    "start_url": "/index.html",
+    "start_url": "/",
     "display": "fullscreen",
     "theme_color": "#B12A34",
     "background_color": "#B12A34"
