--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     ]
   },
   "main": "index.js",
-  "repository": "git@github.com:yapp-project/ssulthday.git",
-  "author": "gilsangwoo <gsw2205@gmail.com>",
+  "repository": "git@github.com/jeonghyeon-k/ssulsday",
+  "author": "jeonghyeon <rlawjd147@naver.com>",
   "license": "MIT",
   "proxy": "http://15.164.218.21:8080"
 }
