--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   "repository": "git@github.com/jeonghyeon-k/ssulsday",
   "author": "jeonghyeon <rlawjd147@naver.com>",
   "license": "MIT",
-  "proxy": "http://15.164.218.21:8080"
+  "proxy": "http://15.164.218.21:8080",
+  "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.4"
+  }
 }
