--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "ssulthday",
   "version": "0.1.0",
   "private": true,
+  "engins":{
+    "yarn" : "1.17.3",
+    "node" : "12.9.1"
+  },
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
@@ -55,7 +59,7 @@
   "repository": "git@github.com/jeonghyeon-k/ssulsday",
   "author": "jeonghyeon <rlawjd147@naver.com>",
   "license": "MIT",
-  "proxy": "https://ssulsday-app.herokuapp.com/",
+  "proxy": "http://15.164.218.21:8080",
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.7.4"
   }
