--- a/package.json
+++ b/package.json
@@ -9,20 +9,12 @@
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
     "node-sass": "^4.12.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-icons": "^3.7.0",
-    "react-scripts": "3.1.2"
-=======
-=======
+    "react-scripts": "3.1.2",
     "express": "^4.17.1",
->>>>>>> 4fa4183... [master]/chore devServer host
-=======
->>>>>>> 540ab84... Revert "[master]/chore devServer host"
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "react": "^16.10.1",
@@ -32,7 +24,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "yarn": "^1.19.1"
->>>>>>> 5e9c3d7f1ac602547fb41343e1908f099cfd7cf6
   },
   "scripts": {
     "start": "react-app-rewired start",
