--- a/package.json
+++ b/package.json
@@ -2,20 +2,10 @@
   "name": "ssulthday",
   "version": "0.1.0",
   "private": true,
-  "engins":{
-    "yarn" : "1.17.3",
-    "node" : "12.9.1"
-  },
   "dependencies": {
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
-    "node-sass": "^4.12.0",
-    "react": "^16.10.1",
-    "react-dom": "^16.10.1",
-    "react-icons": "^3.7.0",
-    "react-scripts": "3.1.2",
-    "express": "^4.17.1",
-    "node-sass": "^4.13.0",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "react": "^16.10.1",
     "react-app-rewired": "^2.1.5",
@@ -48,10 +38,7 @@
   },
   "main": "index.js",
   "repository": "git@github.com/jeonghyeon-k/ssulsday",
-  "author": "jeonghyeon <rlawjd147@naver.com>",
+  "author": "jeonghyeon - k <rlawjd147@naver.com>",
   "license": "MIT",
-  "proxy": "http://15.164.218.21:8080",
-  "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.7.4"
-  }
+  "proxy": "http://15.164.218.21:8080"
 }
